<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="Home_fragment">Home Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="mr_mason">Mr.Mason</string>
    <string name="jeff_mason_tulsatech_edu">jeff.mason@tulsatech.edu</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
</resources>