<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/setting"/>


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_close_fullscreen_24"
            android:title="@string/share"/>


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_call_24"
            android:title="@string/about_us"/>


    </group>

<item
    android:title="">
    <menu>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_arrow_forward_ios_24"
            android:title="@string/logout"/>
    </menu>

</item>

</menu>